--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    start: "node add.js",
+    start: "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aiswarya P Nair",
